# iscc-rs-cli

./: Cargo.toml  README.md
src/: main.rs  mimetypes.rs
src/tika/: mod.rs  request.rs
tests/: test_cli.rs
tests/test_data/text/: .~lock.demo.xlsx#  demo.html  demo.xlsx
