[package]
name = "iscc-cli"
version = "0.1.0"
authors = ["Thilo Hille <hille@equinoxe.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iscc-rs = "0.2"
mime_guess = "2.0.1"
clap = "2.33.0"
walkdir = "2.3.1"
dotext = "0.1.1" 

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
