[package]
name = "iscc-cli"
version = "0.1.0"
authors = ["Thilo Hille <hille@equinoxe.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iscc-rs = { path = "../iscc-rs" }
mime_guess = "2.0.1"
clap = "2.33.0"
walkdir = "2.3.1"
dotext = "0.1.1" 
html2text = "*"
pretty_env_logger = "0.4"
reqwest = "0.9.5"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
